# sneaky-vaccine

./: .envtemplate  .gitignore  README.md  cls_anonimizer.py  cls_unzip.py  docker-compose.yaml  pyproject.toml
.github/workflows/: github-actions-tg.yml
src/: exec_local_model.py  exec_model.py  exec_triton_model.py  main.py  process_dicom_files.py  repaire_dicom_process.py
src/dicom_processing/: dicom_anonimizer.py  dicom_repaire.py  unzip_manager.py  utils_config.py
src/engine/: PhotoObject.py  PhotoStorage.py  PhotoStorageManager.py  main.py
src/nn_train/: train_lightning.py
src/nn_train/datasets/: dataset.py
src/nn_train/models/: simple_cnn_model.py
src/process_dataset_slicer/: README.md  process_dataset.py  process_dataset.sh  visualize_markup.py  visualize_sequence.py
src/slicer_scripts/: README.md  camera_setup.py  check_data_for_loading.py
src/tg_core/: main.py
src/tg_core/tg_back/: handlers.py  states.py
src/tg_core/tg_front/: keyboard_button.py  text.py
src/vision_utils/: image_handler.py  retinaface.py
test_images/: convert_image.sh
triton/models/retina/: config.pbtxt
