[project]
name = "sneaky-vaccine"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "torch>=2.4.1",
    "python-dotenv>=1.0.1",
    "dicom-anonymizer>=1.0.13.post1",
    "ruff>=0.11.9",
    "isort>=5.13.2",
    "black>=24.8.0",
    "ffmpeg-python>=0.2.0",
    "onnxruntime-gpu>=1.20.2",
    "onnxruntime>=1.20.1",
    "pillow>=10.4.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sneaky_vaccine"]
